--- a/templates/add-ingredient.html
+++ b/templates/add-ingredient.html
@@ -9,14 +9,11 @@
         </div>
       </div>
       <div class="form-group row">
-        <div class="form-group col-md-1">
-          <label for="price">Price</label>
+        <div class="form-group col-md-2">
+          <label for="price">Price per</label>
           <input type="number" step="0.01" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
         </div>
-        <div class="form-group col-md-0.5">
-          <label>per</label>
-        </div>
-        <div class="form-group col-md-1">
+        <div class="form-group col-md-2">
           <label for="unit">Unit</label>
           <input type="text" class="form-control" id="unit" autocomplete="off" placeholder="Unit"/>
         </div>
