--- a/templates/add-reservation.html
+++ b/templates/add-reservation.html
@@ -30,7 +30,7 @@
       </div>
 
   <hr />
-      <div class="form-group row" id="reservation" data-hidebefore="guest">
+      <div class="form-group row">
         <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
         <div class="form-group col-md-2">
@@ -61,6 +61,10 @@
             </span>
           </div>
         </div>
+
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label"></div>
         <div class="form-group col-md-2">
           <label for="persons">Persons</label>
           <input type="number" class="form-control" id="persons" autocomplete="off" />
