--- a/templates/update-reservation.html
+++ b/templates/update-reservation.html
@@ -1,4 +1,4 @@
-<h3>Edit Reservation</h3><hr />
+<h3><span>Edit Reservation</span></h3><hr />
   <form>
     <div class="form-group row">
       <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
@@ -27,7 +27,7 @@
         <input type="text" class="form-control" id="telephone" autocomplete="off" placeholder="Telephone">
       </div>
     </div>
-  
+
 <hr />
     <div class="form-group row" id="reservation">
       <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
