--- a/templates/update-reservation.html
+++ b/templates/update-reservation.html
@@ -1,4 +1,4 @@
-<h3><span>Edit Reservation</span></h3><hr />
+<h3><span class="header">Edit Reservation</span></h3><hr />
   <form>
     <div class="form-group row">
       <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
@@ -29,7 +29,7 @@
     </div>
 
 <hr />
-    <div class="form-group row" id="reservation">
+    <div class="form-group row">
       <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
       <div class="form-group col-md-2"  id="col_date">
@@ -46,43 +46,18 @@
         <label for="time_depart">Time Depart</label>
         <input type="text" class="form-control" id="time_depart" autocomplete="off" data-provide="timepicker" placeholder="Time Depart">
       </div>
-      <div class="form-group col-md-2" id="col_persons">
+
+    </div>
+    <div class="form-group row">
+      <div class="col-sm-2 col-form-label"></div>
+      <div class="form-group col-md-2">
         <label for="persons">Persons</label>
-        <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons">
+        <input type="number" class="form-control" id="persons" autocomplete="off" />
       </div>
-      <div class="form-group col-md-2" id="col_table_select">
+      <div class="form-group col-md-2">
         <label for="table_select">Table</label>
-        <select multiple class="form-control" id="table_select">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-          <option value="11">11</option>
-          <option value="12">12</option>
-          <option value="13">13</option>
-          <option value="14">14</option>
-          <option value="15">15</option>
-          <option value="16">16</option>
-          <option value="17">17</option>
-          <option value="18">18</option>
-          <option value="19">19</option>
-          <option value="20">20</option>
-          <option value="21">21</option>
-          <option value="22">22</option>
-          <option value="23">23</option>
-          <option value="24">24</option>
-          <option value="25">25</option>
-          <option value="26">26</option>
-          <option value="27">27</option>
-          <option value="28">28</option>
-          <option value="29">29</option>
-          <option value="30">30</option>
+        <select multiple="multiple" class="form-control browser-default" id="table_select">
+
         </select>
       </div>
     </div>
