--- a/templates/add-reservation.html
+++ b/templates/add-reservation.html
@@ -34,8 +34,9 @@
         <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
         <div class="form-group col-md-3">
-          <label for="date">Date</label>
+          <label for="date">Date </label>
           <input type="text" class="form-control" id="date" autocomplete="off" />
+          <small id="date_feedback"></small>
         </div>
         <div class="form-group col-md-3">
           <label for="time_arrival">Time Arrival</label>
