--- a/templates/update-reservation.html
+++ b/templates/update-reservation.html
@@ -33,8 +33,9 @@
       <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
       <div class="form-group col-md-2"  id="col_date">
-        <label for="date">Date</label>
+        <label for="date">Date </label>
         <input type="text" class="form-control" id="date" autocomplete="off" placeholder="Date">
+        <small id="date_feedback"></small>
       </div>
       <div class="form-group col-md-2"  id="col_time_arrival">
         <label for="time_arrival">Time Arrival</label>
