--- a/templates/add-ingredient.html
+++ b/templates/add-ingredient.html
@@ -21,7 +21,23 @@
         </div>
         <div class="form-group col-md-4">
           <label for="allergies">Allergies</label>
-          <input type="text" class="form-control" id="allergies" autocomplete="off" placeholder="Allergies"/>
+          
+          <select  class="form-control" id="alergies">
+            <option>Peanuts</option>
+            <option>Nuts</option>
+            <option>Shellfish</option>
+            <option>Fish</option>
+            <option>Eggs</option>
+            <option>Milk</option>
+            <option>Gluten</option>
+            <option>Soya</option>
+            <option>Sesame seeds</option>
+            <option>Celery</option>
+            <option>Mustard</option>
+            <option>Lupin</option>
+            <option>Sulphur Dioxide</option>
+
+          </select>
         </div>
       </div>
       <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
