--- a/templates/update-reservation.html
+++ b/templates/update-reservation.html
@@ -29,26 +29,32 @@
     </div>
 
 <hr />
-    <div class="form-group row">
-      <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
+<div class="form-group row">
+  <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
-      <div class="form-group col-md-2"  id="col_date">
-        <label for="date">Date </label>
-        <input type="text" class="form-control" id="date" autocomplete="off" placeholder="Date">
-        <small id="date_feedback"></small>
-      </div>
-      <div class="form-group col-md-2"  id="col_time_arrival">
-        <label for="time_arrival">Time Arrival</label>
+  <div class="form-group col-md-3">
+    <label for="date">Date </label>
+    <input type="text" class="form-control" id="date" autocomplete="off" />
+    <small id="date_feedback"></small>
+  </div>
+  <div class="form-group col-md-3">
+    <label for="time_arrival">Time Arrival</label>
+    <div class="input-group bootstrap-timepicker timepicker">
 
-          <input type="text" class="form-control" id="time_arrival" autocomplete="off" data-provide="timepicker" placeholder="Time Arrival">
-
-      </div>
-      <div class="form-group col-md-2"  id="col_time_depart">
-        <label for="time_depart">Time Depart</label>
-        <input type="text" class="form-control" id="time_depart" autocomplete="off" data-provide="timepicker" placeholder="Time Depart">
-      </div>
+      <input type="text" class="form-control" id="time_arrival" autocomplete="off"  />
 
     </div>
+  </div>
+  <div class="form-group col-md-3">
+    <label for="time_depart">Time Depart</label>
+    <div class="input-group bootstrap-timepicker timepicker">
+
+      <input type="text" class="form-control" id="time_depart" autocomplete="off"  />
+
+    </div>
+  </div>
+
+</div>
     <div class="form-group row">
       <div class="col-sm-2 col-form-label"></div>
       <div class="form-group col-md-2">
