--- a/templates/add-reservation.html
+++ b/templates/add-reservation.html
@@ -33,7 +33,7 @@
       <div class="form-group row" id="reservation" data-hidebefore="guest">
         <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-4">
           <label for="date">Date</label>
           <input type="text" class="form-control" id="date" autocomplete="off" />
         </div>
@@ -61,6 +61,8 @@
             </span>
           </div>
         </div>
+      </div>
+      <div class="form-group row">
         <div class="form-group col-md-2 offset-md-2">
           <label for="persons">Persons</label>
           <input type="number" class="form-control" id="persons" autocomplete="off" />
