--- a/templates/add-table.html
+++ b/templates/add-table.html
@@ -1,22 +1,22 @@
 <h3>Add Table</h3><hr />
   <form>
     <div class="form-group row">
-      <div class="form-group col-md-2">
-        <label for="table_id">Table nr.</label>
-        <input type="number" min="1" max="999" class="form-control" id="table_id" autocomplete="off" placeholder="">
+      <div class="form-group col-sm-6 col-md-3">
+        <label for="id">Table nr.</label>
+        <input type="number" min="1" max="999" class="form-control" id="id" autocomplete="off" placeholder="">
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-sm-6 col-md-3">
         <label for="chairs">Chair amount</label>
-        <input type="number" min="0" max="24" class="form-control" id="chairs" autocomplete="off" placeholder="4">
+        <input type="number" min="0" max="24" class="form-control" id="chairs" autocomplete="off" value="4">
       </div>
-      <div class="form-group col-md-2">
-        <label for="wheelchair">Wheelchair accessible</label>
+      <div class="form-group col-sm-6 col-md-3">
+        <label for="wheelchair">Wheelchair Access</label>
         <select class="form-control" id="wheelchair">
           <option value="0">No</option>
           <option value="1" selected="selected">Yes</option>
         </select>
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-sm-6 col-md-3">
         <label for="table_status">Status</label>
         <select class="form-control" id="table_status">
           <option value="0" selected="selected">Out of order</option>
