--- a/templates/add-table.html
+++ b/templates/add-table.html
@@ -3,7 +3,7 @@
     <div class="form-group row">
       <div class="form-group col-md-2">
         <label for="table_id">Table nr.</label>
-        <input type="number" min="1" max="999" class="form-control" id="table_id" autocomplete="off" placeholder="">
+        <input type="number" min="1" max="999" class="form-control" id="nr" autocomplete="off" placeholder="">
       </div>
       <div class="form-group col-md-2">
         <label for="chairs">Chair amount</label>
