--- a/templates/edit-ingredient.html
+++ b/templates/edit-ingredient.html
@@ -2,9 +2,17 @@
   <h3>Edit Ingredient</h3><hr />
     <form>
       <div class="form-group row">
-        <div class="form-group col-md-2">
+
+        <div class="form-group col-md-8">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name" autocomplete="off" placeholder="Name"/>
+        </div>
+        <div class="form-group col-md-4">
+          <label for="category">Category</label>
+          <select id="category"  class="form-control">
+
+
+          </select>
         </div>
       </div>
       <div class="form-group row">
@@ -12,37 +20,18 @@
           <label for="price">Price per</label>
           <input type="number" step="0.01" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-5">
           <label for="unit">Unit</label>
           <select id="unit"  class="form-control">
-            <option> piece (pcs)</option>
-            <option> miligram (mg)</option>
-            <option> gram (g)</option>
-            <option> pound (lb)</option>
-            <option> kilogram (kg)</option>
-            <option> liter (l)</option>
+
           </select>
         </div>
-        <div class="form-group col-md-4">
-          <label for="category">Category</label>
-          <input type="text" class="form-control" id="category" autocomplete="off" placeholder="Category"/>
-        </div>
-        <div class="form-group col-md-4">
+
+        <div class="form-group col-md-5">
           <label for="allergies">Allergies</label>
+
           <select  class="form-control" id="allergies">
-            <option>Peanuts</option>
-            <option>Nuts</option>
-            <option>Shellfish</option>
-            <option>Fish</option>
-            <option>Eggs</option>
-            <option>Milk</option>
-            <option>Gluten</option>
-            <option>Soya</option>
-            <option>Sesame seeds</option>
-            <option>Celery</option>
-            <option>Mustard</option>
-            <option>Lupin</option>
-            <option>Sulphur Dioxide</option>
+          
 
           </select>
         </div>
