--- a/templates/update-table.html
+++ b/templates/update-table.html
@@ -3,7 +3,7 @@
     <div class="form-group row">
       <div class="form-group col-hidden">
         <label for="id">Table nr. </label>
-        <input type="number" min="1" max="999" class="form-control" id="id" autocomplete="off" placeholder="" disabled="disabled">
+        <input type="number" min="1" max="999" class="form-control" id="nr" autocomplete="off" placeholder="" disabled="disabled">
       </div>
       <div class="form-group col-sm-6 col-md-3">
         <label for="chairs">Chair amount</label>
