--- a/templates/add-ingredient.html
+++ b/templates/add-ingredient.html
@@ -10,20 +10,29 @@
         <div class="form-group col-md-4">
           <label for="category">Category</label>
           <select id="category"  class="form-control">
-            
+            <option disabled selected>
+              - Select -
+            </option>
 
           </select>
         </div>
       </div>
       <div class="form-group row">
         <div class="form-group col-md-2">
-          <label for="price">Price per</label>
+          <label for="price">Price</label>
+          <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text">&euro;</div>
+          </div>
           <input type="number" step="0.01" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
+        </div>
         </div>
         <div class="form-group col-md-5">
           <label for="unit">Unit</label>
           <select id="unit"  class="form-control">
-
+            <option disabled selected>
+              - Select -
+            </option>
           </select>
         </div>
 
@@ -31,7 +40,9 @@
           <label for="allergies">Allergies</label>
 
           <select  class="form-control" id="allergies">
-
+            <option disabled selected>
+              - Select -
+            </option>
           </select>
         </div>
       </div>
