--- a/templates/update-ingredient.html
+++ b/templates/update-ingredient.html
@@ -17,9 +17,14 @@
       </div>
       <div class="form-group row">
         <div class="form-group col-md-2">
-          <label for="price">Price per</label>
+          <label for="price">Price</label>
+          <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text">&euro;</div>
+          </div>
           <input type="number" step="0.01" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
         </div>
+      </div>
         <div class="form-group col-md-5">
           <label for="unit">Unit</label>
           <select id="unit"  class="form-control">
@@ -31,7 +36,7 @@
           <label for="allergies">Allergies</label>
 
           <select  class="form-control" id="allergies">
-          
+
 
           </select>
         </div>
