--- a/templates/add-table.html
+++ b/templates/add-table.html
@@ -2,9 +2,9 @@
   <form>
     <div class="form-group row">
 
-      <div class="form-group col-sm-6">
+      <div class="form-group col-sm-6 col-md-3">
         <label for="id">Table nr.</label>
-        <input type="number" min="1" max="999" class="form-control" id="id" autocomplete="off" placeholder="">
+        <input type="number" class="form-control" id="nr" autocomplete="off" placeholder="">
 
       </div>
       <div class="form-group col-sm-6 col-md-3">
