--- a/templates/add-reservation.html
+++ b/templates/add-reservation.html
@@ -20,7 +20,7 @@
         <div class="col-sm-2 col-form-label"></div>
         <div class="form-group col-md-5">
           <label for="email">E-mail</label>
-          <input type="text" class="form-control" id="email" autocomplete="off" />
+          <input type="email" class="form-control" id="email" autocomplete="off" />
         </div>
 
         <div class="form-group col-md-5">
