--- a/templates/update-reservation.html
+++ b/templates/update-reservation.html
@@ -19,7 +19,7 @@
       <div class="col-sm-2 col-form-label"></div>
       <div class="form-group col-md-5" id="col_email">
         <label for="email">E-mail</label>
-        <input type="text" class="form-control" id="email" autocomplete="off" placeholder="E-mail">
+        <input type="email" class="form-control" id="email" autocomplete="off" placeholder="E-mail">
       </div>
 
       <div class="form-group col-md-5"  id="col_telephone">
